@@ -19,6 +19,7 @@ v2.6.24
 * NAT-OA fixes [David]
 * Fixup cryptoapi sg_set_page for older kernels [David]
 * Honour kernel build verbose setting via V=1 [mcr]
+* Change NAT-Traversal support log message (It's not a patch) [Tuomo]
 * Bugtracker bugs fixed:
    #1004: L2TP broken with NAT'ed clients [dhr/Tuomo/Paul]
    #1055: init script hangs on startup with semi-broken shells [Michael Smith]
